css/style.css
.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
	font-size: inherit;
}
nav a {
	color: black;
}
.ghicon {
	text-align: center;
	padding-top: 10px;
}
.link-icon {
	padding-right: 10px;
}
.project-links {
	text-align: center;
}
#modal4 {
	position: center;
}
.col .s12 .m4 {
	align-items: center;
}
.footer-icon {
	display: inline-block; 
	padding-left:0px;
	padding-top:10px;
	padding-right:10px;
	padding-bottom:10px;"
}
.hover:hover{
  cursor:pointer;
  
  border-color: black;
}
.footer-section {
	padding-top 500px;
	padding bottom 250px;
}
h1 {
	font-weight: lighter;
}
h5 {
	font-weight: light;
}
.project-card {
	border-color: black;

}
.project-card img{
	cursor:pointer
}
.header {
	padding-bottom: 10px;
}
.intro-section {
	padding-top: 150px;
	padding-bottom: 200px;
}
.project-image {
	border-color: black;
	border-width: thin;
}
.project-section {
	padding-bottom: 200px;
}
.tech-section {
	padding-bottom: -25px;
}

.bottom-section {
	padding-top: 400px;
	padding-bottom: 200px;
}
.name-logo {
  font: 400 3.5em/125% 'Sacramento', Helvetica, Sans-serif;
	color: #333;
  text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
}
@keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
.blink-img {
    animation: blink 1.5s;
    animation-iteration-count: infinite;
    position: relative;
    padding-bottom: 100px;
}
.blink-img-2{
    animation: blink 1.5s;
    animation-iteration-count: infinite;
    padding-top: 100px;
}
.blink-img-3{
    animation: blink 1.5s;
    animation-iteration-count: infinite;
    padding-top: 100px;
}
.face-photo {
	position: left;
	position: relative;
	padding-left: 160px;
	padding-bottom: 50px;
}

.spaced-out-heading {
  font-family: Roboto, sans-serif;
  font-size: 2.7em;
  font-weight: 100;
  line-height: 1em;
  letter-spacing: 0.4em;
  color: black;
  background-color: #fff;
  display: center;
  margin-top: -0.7em;
  padding: 0.65em 0 0.65em 0.7em;
  padding-bottom: 50px;

}

#tech-list li {
	padding-bottom: 25px;

}

.technologies-list {
  font-family: Roboto, sans-serif;
  font-size: 1.5em;
  font-weight: 200;
  line-height: 1em;
  letter-spacing: 0.4em;
  color: #1d6152;
  background-color: #fff;
  
  margin-top: -0.7em;
  padding: 0.65em 0 0.65em 0.7em;
}
.connect-lines {
	padding-bottom: 50px;
}
.bottom-heading {
	padding-bottom: 50px;
}

